# wdl

./: .gitignore  CMakeLists.txt  README.md
include/wdl/: concurrency.hpp  crypto.hpp  debug.hpp  error.hpp  filesystem.hpp  handle.hpp  interlocked.hpp  io.hpp  ipc.hpp  memory.hpp  net.hpp  process.hpp  registry.hpp  security.hpp  synchronization.hpp  thread.hpp  threadpool.hpp  timing.hpp
include/wdl/concurrency/: thread.hpp
include/wdl/crypto/: base.hpp  buffer.hpp  hash.hpp  key.hpp  random.hpp  symmetric.hpp
include/wdl/debug/: debug.hpp
include/wdl/error/: com_exception.hpp  message.hpp  nt_exception.hpp  win32_exception.hpp
include/wdl/filesystem/: base.hpp  directory.hpp  path.hpp
include/wdl/handle/: crypto.hpp  filesystem.hpp  generic.hpp  heap.hpp  module.hpp  network.hpp  pipe.hpp  private_namespace.hpp  registry.hpp  threadpool.hpp  unique_handle.hpp
include/wdl/interlocked/: slist.hpp
include/wdl/io/: iocp.hpp  mapped_file.hpp
include/wdl/ipc/: base.hpp  duplex_pipe.hpp  duplex_pipe_old.hpp  pipe_acceptor.hpp  pipe_type.hpp
include/wdl/memory/: shared_memory.hpp  util.hpp  virtual.hpp
include/wdl/net/: base.hpp
include/wdl/process/: scoped_process.hpp
include/wdl/registry/: base.hpp
include/wdl/security/: base.hpp  privilege.hpp  token.hpp
include/wdl/synchronization/: auto_lock.hpp  barrier.hpp  condition_variable.hpp  critical_section.hpp  critical_section_alt.hpp  event.hpp  interprocess_barrier.hpp  mutex.hpp  slim_lock.hpp  wait.hpp  waitable_address.hpp
include/wdl/thread/: thread.hpp
include/wdl/threadpool/: base.hpp  cleanup_group.hpp  environment.hpp  pool.hpp
include/wdl/timing/: callback_timer.hpp  filetime.hpp  scoped_timer.hpp  timer_queue.hpp
include/wdl/utility/: unique_handle.hpp
perf/: spin_counts.cpp
src/synchronization/: wait.cpp
test/: CMakeLists.txt  catch_main.cpp
test/crypto/: buffer.cpp  random.cpp
test/handle/: generic.cpp
test/interlocked/: slist_test.cpp
test/io/: iocp.cpp  mapped_file.cpp  mapped_file_test.cpp
test/memory/: region.cpp
test/synchronization/: barrier.cpp  barrier_test.cpp  critical_section.cpp  critical_section_alt.cpp  critical_section_alt_test.cpp  critical_section_test.cpp  event.cpp  mutex.cpp  slim_lock.cpp  slim_lock_test.cpp  wait.cpp  wait_test.cpp  waitable_address.cpp  waitable_address_test.cpp
test/thread/: thread.cpp
test/threadpool/: pool.cpp
test/timing/: filetime.cpp  scoped_timer_test_0.cpp  scoped_timer_test_1.cpp  timer_queue_test.cpp
test/utility/: unique_handle.cpp  unique_handle_test.cpp
wdl/: auto_lock.h  condition_variable.h  critical_section.h  debug.h  deleter.h  event.h  exception.h  io.h  mapped_file.h  message_queue.h  mutex.h  performance.h  slim_lock.h  smart_handle.h  sync.h  thread.h  thread_pool.h  token.h  unique_handle.h  wdl.h
wdl/io/: mapped_file.hpp
wdl/misc/: message_queue.hpp
wdl/security/: token.hpp
wdl/synchronization/: auto_lock.hpp  barrier.hpp  condition_variable.hpp  critical_section.hpp  slim_lock.hpp  wait.hpp  waitable_address.hpp
wdl/threadpool/: thread_pool.hpp
wdl/timing/: timing.hpp
wdl/utility/: deleter.hpp  exception.hpp  unique_handle.hpp
